--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/Natu.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,21 +39,20 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Append</h1>
-        <span>.</span>
+        <img src="assets/img/Natu.png" alt="">
+        <h1>en su Essen</h1>
       </a>
 
       <!-- Nav Menu -->
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html#hero" class="active">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#services">Services</a></li>
-          <li><a href="index.html#portfolio">Portfolio</a></li>
-          <li><a href="index.html#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown has-dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="index.html#about">Sobre mí</a></li>
+          <li><a href="index.html#services">Servicios</a></li>
+          <li><a href="index.html#portfolio">Productos</a></li>
+          <!-- <li><a href="index.html#team">Team</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <!-- <li class="dropdown has-dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
             <ul class="dd-box-shadow">
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown has-dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down"></i></a>
@@ -68,14 +68,14 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
-          <li><a href="index.html#contact">Contact</a></li>
+          </li> -->
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
 
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
 
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <a class="btn-getstarted" href="index.html#about">¿Cómo comienzo?</a>
 
     </div>
   </header><!-- End Header -->
@@ -102,10 +102,11 @@
         </div>
       </div>
 
-    </section><!-- End Hero Section -->
+    </section>
+    <!-- End Hero Section -->
 
     <!-- Clients Section - Home Page -->
-    <section id="clients" class="clients">
+    <!-- <section id="clients" class="clients">
 
       <div class="container-fluid" data-aos="fade-up">
 
@@ -113,33 +114,34 @@
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>--><!-- End Client Item 
 
         </div>
 
       </div>
 
-    </section><!-- End Clients Section -->
+    </section> -->
+    <!-- End Clients Section -->
 
     <!-- About Section - Home Page -->
     <section id="about" class="about">
@@ -198,47 +200,52 @@
     </section><!-- End About Section -->
 
     <!-- Stats Section - Home Page -->
-    <section id="stats" class="stats">
+    <!-- <section id="stats" class="stats"> -->
 
-      <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in">
+      <!-- <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in"> -->
 
-      <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
+      <!-- <div class="container position-relative" data-aos="fade-up" data-aos-delay="100"> -->
 
-        <div class="row gy-4">
+        <!-- <div class="row gy-4"> -->
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
               <p>Clients</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div> -->
+          <!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div> -->
+          <!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Support</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div> -->
+          <!-- End Stats Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p>Workers</p>
             </div>
-          </div><!-- End Stats Item -->
+          </div> -->
+          <!-- End Stats Item -->
 
-        </div>
+        <!-- </div> -->
 
-      </div>
+      <!-- </div> -->
 
-    </section><!-- End Stats Section -->
+    <!-- </section> -->
+    <!-- End Stats Section -->
 
     <!-- Services Section - Home Page -->
     <section id="services" class="services">
@@ -489,19 +496,19 @@
     </section><!-- End Portfolio Section -->
 
     <!-- Pricing Section - Home Page -->
-    <section id="pricing" class="pricing">
+    <!-- <section id="pricing" class="pricing"> -->
 
       <!--  Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Pricing</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div> -->
+      <!-- End Section Title -->
 
-      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <!-- <div class="container" data-aos="zoom-in" data-aos-delay="100"> -->
 
-        <div class="row g-4">
-
-          <div class="col-lg-4">
+        <!-- <div class="row g-4"> -->
+          <!-- <div class="col-lg-4">
             <div class="pricing-item">
               <h3>Free Plan</h3>
               <div class="icon">
@@ -517,9 +524,10 @@
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <div class="pricing-item featured">
               <h3>Business Plan</h3>
               <div class="icon">
@@ -536,9 +544,10 @@
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <div class="pricing-item">
               <h3>Developer Plan</h3>
               <div class="icon">
@@ -554,13 +563,15 @@
               </ul>
               <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
-        </div>
+        <!-- </div> -->
 
-      </div>
+      <!-- </div> -->
 
-    </section><!-- End Pricing Section -->
+    <!-- </section> -->
+    <!-- End Pricing Section -->
 
     <!-- Faq Section - Home Page -->
     <section id="faq" class="faq">
@@ -631,19 +642,20 @@
     </section><!-- End Faq Section -->
 
     <!-- Team Section - Home Page -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team"> -->
 
       <!--  Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div> -->
+      <!-- End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container"> -->
 
-        <div class="row gy-5">
+        <!-- <div class="row gy-5"> -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="100">
             <div class="member-img">
               <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -658,9 +670,10 @@
               <span>Chief Executive Officer</span>
               <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
             <div class="member-img">
               <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -675,9 +688,10 @@
               <span>Product Manager</span>
               <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
               <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -692,9 +706,10 @@
               <span>CTO</span>
               <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
               <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -709,9 +724,10 @@
               <span>Accountant</span>
               <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam consectetur</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="500">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="500">
             <div class="member-img">
               <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -726,9 +742,10 @@
               <span>Marketing</span>
               <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit laborum velit</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-          <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+          <!-- <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
               <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
               <div class="social">
@@ -743,13 +760,15 @@
               <span>Operation</span>
               <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
+          <!-- End Team Member -->
 
-        </div>
+        <!-- </div> -->
 
-      </div>
+      <!-- </div> -->
 
-    </section><!-- End Team Section -->
+    <!-- </section> -->
+    <!-- End Team Section -->
 
     <!-- Call-to-action Section - Home Page -->
     <section id="call-to-action" class="call-to-action">
@@ -1117,7 +1136,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>Append</span>
+            <img class="logo" src="/assets/img/NatuEnSuEssen.png" alt="logo">
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -1163,13 +1182,14 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>&copy; <span>Copyright</span> <strong class="px-1">Append</strong> <span>Todos los derechos reservados</span></p>
+      <p>&copy;<strong class="px-1">Natu en su Essen.</strong> <span>Todos los derechos reservados</span></p>
       <div class="credits">
         Diseñado por <a href="https://mibrujula.com.ar/">Mi Brújula</a>
       </div>
     </div>
 
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <!-- Scroll Top Button -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
